# vertiSystem-assigment2

./: Basic_CI_CD_Pipeline.pptx  app.py  docker-compose.yml  dockerfile  predicted_data.csv  pyproject.toml  readme.md  train_model.py
app/: model.py
notebook/: u-s-electricityprices-data-analysis-randomforest.ipynb
static/: style.css
templates/: index.html
